--- a/Assets/Code/Scripts/EventBus/EventBus.asmdef
+++ b/Assets/Code/Scripts/EventBus/EventBus.asmdef
@@ -1,3 +1,14 @@
 {
-  "name": "EventBus"
+    "name": "EventBus",
+    "rootNamespace": "",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
