--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,6 @@ crashlytics-build.properties
 # If the source bank files are kept outside of the StreamingAssets folder then these can be ignored.
 # Log files can be ignored.
 fmod_editor.log
+/.idea
+.idea/.idea.Naval Warfare/.idea/statistic.xml
+.idea/.idea.Naval Warfare/.idea/workspace.xml
